<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Realtime Draw</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_new">Clear</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="opacity">Opacity</string>
    <string name="draw_now">Draw now</string>
    <string name="watch">Play last drawing</string>
    <string name="watching_back">back</string>
    <string name="watching_play">play/pause</string>
    <string name="draw_and_send"><![CDATA[Draw & send]]></string>
    <string name="receive_and_play"><![CDATA[Receive & play]]></string>
    <string name="APP_ID"> 566601083457511 </string>
    <string name="go_menu">Draw now</string>
    <string name="connection">connection</string>
    <string name="get_started">To get started, log in using Facebook</string>
    <string name="gallery">Gallery</string>
    <string name="loading">Loading...</string>
    <string name="save_insert_name">Name your drawing...</string>
    <string name="browse_online">browse online</string>
</resources>
