<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:layout_gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1"
        android:paddingTop="100dp"
        android:paddingBottom="200dp">
        <Button
            android:id="@+id/watch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="watch"
            android:text="@string/watch"
            android:textColor="#5749fd"
            android:textSize="40sp"
            android:background="@android:color/transparent"
            android:enabled="true"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/draw_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:onClick="draw_now"
            android:singleLine="false"
            android:text="@string/draw_now"
            android:textColor="#5e4bff"
            android:background="@android:color/transparent"
            android:textSize="40dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/draw_and_send"
            android:id="@+id/button"
            android:background="@android:color/transparent"
            android:enabled="true"
            android:textColor="#FF5E4BFF"
            android:textSize="40dp"
            android:layout_weight="1"
            android:onClick="draw_and_send"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive_and_play"
            android:id="@+id/button2"
            android:layout_weight="1"
            android:textSize="40dp"
            android:textColor="#ff5e4bff"
            android:enabled="true"
            android:background="@android:color/transparent"
            android:layout_marginRight="20dp"
            android:onClick="receive_and_play"/>


    </LinearLayout>

</LinearLayout>